# vkhrt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  toolchain.cmake
.github/: pull_request_template.md
.github/workflows/: build_checks.yml  cpp_linter.yml
include/: acceleration_structure.hpp  application.hpp  bottom_level_acceleration_structure.hpp  common.hpp  editor.hpp  fly_camera.hpp  imgui_backend.hpp  model_loader.hpp  renderer.hpp  shader.hpp  single_time_commands.hpp  swap_chain.hpp  timer.hpp  top_level_acceleration_structure.hpp  vk_common.hpp  vulkan_context.hpp
include/input/: input.hpp  input_codes.hpp
include/resources/: bindless_resources.hpp  camera_resource.hpp  file_io.hpp  gpu_resources.hpp  resource_manager.hpp
include/resources/model/: model.hpp  (+3 more)
scripts/: run_clang_format.bat
scripts/python/: format.py
shaders/: CMakeLists.txt  bindless.glsl  closest_hit.rchit  cone.glsl  curve.glsl  cylinder.glsl  debug.glsl  hair_closest_hit.rchit  hair_intersection.rint  miss.rmiss  primitives.glsl  ray.glsl  ray_gen.rgen  shading.glsl  triangle_closest_hit.rchit  voxel_closest_hit.rchit  voxel_intersection.rint
source/: application.cpp  bottom_level_acceleration_structure.cpp  editor.cpp  fly_camera.cpp  imgui_backend.cpp  main.cpp  model_loader.cpp  renderer.cpp  shader.cpp  single_time_commands.cpp  swap_chain.cpp  timer.cpp  top_level_acceleration_structure.cpp  vk_common.cpp  vulkan_context.cpp
source/input/: input.cpp
source/resources/: bindless_resources.cpp  camera_resource.cpp  file_io.cpp  gpu_resources.cpp  vma_impl.cpp
(+4 files in other folders)
